--- a/index.html
+++ b/index.html
@@ -3,41 +3,106 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Password Generator by Ar</title>
+    <title>Powered by Ar.Dev</title>
   </head>
   <body>
     <main class="container">
       <div class="box">
-        <h1>Password Generator</h1>
-        <div class="lengthCount">
-          <p>Length</p>
-          <label for="count">
-            <input type="number" id="count" />
-          </label>
-        </div>
-        <div class="range">
-          <input type="range" id="range" min="1" max="100" />
-        </div>
-        <div class="checkBox">
-          <label for="smallAlpa">
-            <input type="checkbox" id="smallAlpa" /><span>(A-Z)</span>
-          </label>
-          <label for="capitalAlpa">
-            <input type="checkbox" id="capitalAlpa" /><span>(a-z)</span>
-          </label>
-          <label for="number">
-            <input type="checkbox" id="number" /><span>0123456789</span>
-          </label>
-          <label for="charactor">
-            <input type="checkbox" id="charactor" /><span
-              >!@#$%^&*(-)_=+.,?\/</span
+        <h1>Secure Passowrd Generator</h1>
+
+        <div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox1"
+              value="option1"
+            />
+            <label class="form-check-label" for="inlineCheckbox1"
+              >Small Alphabet</label
             >
-          </label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox2"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2"
+              >Capital Alphabet</label
+            >
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox3"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox3"
+              >Special Charactor</label
+            >
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox4"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox4"
+              >Numbers</label
+            >
+          </div>
         </div>
+
+        <div class="d-flex justify-content-evenly w-50">
+          <label class="form-label" for="customRange2">Password Length</label>
+          <div class="range w-50">
+            <input
+              type="range"
+              class="form-range"
+              min="0"
+              max="16"
+              id="customRange2"
+            />
+          </div>
+          <p>8</p>
+        </div>
+        <div class="form-outline w-50">
+          <input type="text" id="form12" class="form-control" disabled/>
+          <label class="form-label" for="form12">Generated Password</label>
+          <div class="positions"><button>Copy</button></div>
+        </div>
+        <!-- box end -->
       </div>
     </main>
 
+    <!-- MDB -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
