function added for checkbox

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               class="form-check-input"
               type="checkbox"
               id="inlineCheckbox1"
-              value="option1"
+              checked
             />
             <label class="form-check-label" for="inlineCheckbox1"
               >Small Alphabet</label
@@ -44,7 +44,6 @@
               class="form-check-input"
               type="checkbox"
               id="inlineCheckbox2"
-              value="option2"
             />
             <label class="form-check-label" for="inlineCheckbox2"
               >Capital Alphabet</label
@@ -56,7 +55,6 @@
               class="form-check-input"
               type="checkbox"
               id="inlineCheckbox3"
-              value="option2"
             />
             <label class="form-check-label" for="inlineCheckbox3"
               >Special Charactor</label
@@ -68,7 +66,7 @@
               class="form-check-input"
               type="checkbox"
               id="inlineCheckbox4"
-              value="option2"
+              checked
             />
             <label class="form-check-label" for="inlineCheckbox4"
               >Numbers</label
@@ -90,7 +88,7 @@
           <p>8</p>
         </div>
         <div class="form-outline w-50">
-          <input type="text" id="form12" class="form-control" disabled/>
+          <input type="text" id="form12" class="form-control" disabled />
           <label class="form-label" for="form12">Generated Password</label>
           <div class="positions"><button>Copy</button></div>
         </div>
