--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <input
               class="form-check-input"
               type="checkbox"
-              id="inlineCheckbox1"
+              id="smallCheckBox"
               checked
             />
-            <label class="form-check-label" for="inlineCheckbox1"
+            <label class="form-check-label" for="smallCheckBox"
               >Small Alphabet</label
             >
           </div>
@@ -43,9 +43,9 @@
             <input
               class="form-check-input"
               type="checkbox"
-              id="inlineCheckbox2"
+              id="capitalCheckBox"
             />
-            <label class="form-check-label" for="inlineCheckbox2"
+            <label class="form-check-label" for="capitalCheckBox"
               >Capital Alphabet</label
             >
           </div>
@@ -54,24 +54,24 @@
             <input
               class="form-check-input"
               type="checkbox"
-              id="inlineCheckbox3"
+              id="specialCheckBox"
             />
-            <label class="form-check-label" for="inlineCheckbox3"
+            <label class="form-check-label" for="specialCheckBox"
               >Special Charactor</label
             >
           </div>
 
-          <div class="form-check form-check-inline">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              id="inlineCheckbox4"
-              checked
-            />
-            <label class="form-check-label" for="inlineCheckbox4"
-              >Numbers</label
-            >
-          </div>
+          <!-- <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                id="numberCheckBox"
+                checked
+              />
+              <label class="form-check-label" for="numberCheckBox"
+                >Numbers</label
+              >
+            </div> -->
         </div>
 
         <div class="d-flex justify-content-evenly w-50">
@@ -87,9 +87,10 @@
           </div>
           <p>8</p>
         </div>
+        <button onclick="generatePass()">Generate Passowrd</button>
         <div class="form-outline w-50">
-          <input type="text" id="form12" class="form-control" disabled />
-          <label class="form-label" for="form12">Generated Password</label>
+          <input type="text" id="displayPass" class="form-control" />
+          <label class="form-label" for="displayPass">Generated Password</label>
           <div class="positions"><button>Copy</button></div>
         </div>
         <!-- box end -->
