--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               class="form-check-input"
               type="checkbox"
               id="capitalCheckBox"
+              checked
             />
             <label class="form-check-label" for="capitalCheckBox"
               >Capital Alphabet</label
