--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="displayBox">
           <!-- Display Value Input -->
           <div class="display">
-            <input type="text" id="inputDisplay" placeholder="ilovejs"/>
+            <input type="text" id="inputDisplay" placeholder="ilovejs" />
             <!-- Password Show/Hidden -->
             <div class="passIcon">
               <i class="fa-solid fa-eye p-show"></i>
@@ -39,22 +39,24 @@
               </div>
             </div>
             <!-- Copy -->
-            <div class="copy"><i class="fa-regular fa-copy"></i> Copy</div>
-            <div class="copied"><i class="fa-solid fa-copy"></i> Copied</div>
+            <div id="clipBoard">
+              <div class="copy"><i class="fa-regular fa-copy"></i> Copy</div>
+              <div class="copied"><i class="fa-solid fa-copy"></i> Copied</div>
+            </div>
           </div>
           <!-- Range Bar -->
           <div>
-            <input type="range" min="0" max="24" id="rangeBar" />
+            <input type="range" min="0" max="24" id="rangeBar" value="12" />
           </div>
           <!--Range Value & CheckBox -->
           <div class="checkBox-Container">
             <div>
               <!-- Range value -->
-              <p>Character Length:<span id="rangeDisplay"></span></p>
+              <p>Character Length:<span id="rangeDisplay">12</span></p>
             </div>
             <div class="checkboxes">
               <!-- CheckBox -->
-              <input type="checkbox" id="capitalLetters" checked/>
+              <input type="checkbox" id="capitalLetters" checked />
               <label for="capitalLetters">A-Z</label>
               <input type="checkbox" id="smallLetters" />
               <label for="smallLetters">a-z</label>
