--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="displayBox">
           <!-- Display Value Input -->
           <div class="display">
-            <input type="text" id="inputDisplay" placeholder="ilovejs" />
+            <input type="text" id="inputDisplay" placeholder="STr0^g P@$$w0r|)" />
             <!-- Password Show/Hidden -->
             <div class="passIcon">
               <i class="fa-solid fa-eye p-show"></i>
