--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <div class="displayBox">
           <!-- Display Value Input -->
           <div class="display">
-            <input type="text" id="inputDisplay" placeholder="STr0^g P@$$w0r|)" />
+            <input
+              type="text"
+              id="inputDisplay"
+              placeholder="STr0^g P@$$w0r|)"
+            />
             <!-- Password Show/Hidden -->
             <div class="passIcon">
               <i class="fa-solid fa-eye p-show"></i>
@@ -26,7 +30,7 @@
           <!-- Dialogue Box -->
           <div class="dialogueBox">
             <!-- Password Checker -->
-            <div>
+            <div id="passField">
               <!-- Strong Password -->
               <div class="strongPass">
                 <i class="fa-solid fa-circle-check"></i>
