--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <main class="container">
@@ -30,22 +34,22 @@
           <!-- Dialogue Box -->
           <div class="dialogueBox">
             <!-- Password Checker -->
-            <div id="passField">
+            <div>
               <!-- Strong Password -->
-              <div class="strongPass">
+              <div class="strongPass animate__animated animate__fadeIn">
                 <i class="fa-solid fa-circle-check"></i>
                 Strong Password
               </div>
               <!-- weak password -->
-              <div class="weakPass">
+              <div class="weakPass animate__animated animate__fadeIn">
                 <i class="fa-solid fa-circle-xmark"></i>
                 Weak Password
               </div>
             </div>
             <!-- Copy -->
             <div id="clipBoard">
-              <div class="copy"><i class="fa-regular fa-copy"></i> Copy</div>
-              <div class="copied"><i class="fa-solid fa-copy"></i> Copied</div>
+              <div class="copy animate__animated animate__fadeIn"><i class="fa-regular fa-copy"></i> Copy</div>
+              <div class="copied animate__animated animate__fadeIn"><i class="fa-solid fa-copy"></i> Copied</div>
             </div>
           </div>
           <!-- Range Bar -->
