add validation for password check

--- a/index.html
+++ b/index.html
@@ -45,11 +45,19 @@
                 <i class="fa-solid fa-circle-xmark"></i>
                 Weak Password
               </div>
+              <div class="empty animate__animated animate__fadeIn">
+                <i class="fa-solid fa-circle-xmark"></i>
+                Can't copy empty field
+              </div>
             </div>
             <!-- Copy -->
             <div id="clipBoard">
-              <div class="copy animate__animated animate__fadeIn"><i class="fa-regular fa-copy"></i> Copy</div>
-              <div class="copied animate__animated animate__fadeIn"><i class="fa-solid fa-copy"></i> Copied</div>
+              <div class="copy animate__animated animate__fadeIn">
+                <i class="fa-regular fa-copy"></i> Copy
+              </div>
+              <div class="copied animate__animated animate__fadeIn">
+                <i class="fa-solid fa-copy"></i> Copied
+              </div>
             </div>
           </div>
           <!-- Range Bar -->
