--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <main class="container">
       <div class="box">
+        <h1>Passowrd Generator</h1>
         <div class="displayBox">
           <!-- Display Value Input -->
           <div class="display">
