--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
                 <i class="fa-solid fa-circle-xmark"></i>
                 Weak Password
               </div>
+              <!-- empty field -->
               <div class="empty animate__animated animate__fadeIn">
                 <i class="fa-solid fa-circle-xmark"></i>
                 Can't copy empty field
+              </div>
+              <!-- empty CheckBox -->
+              <div class="emptyCheckBox animate__animated animate__fadeIn">
+                <i class="fa-solid fa-circle-xmark"></i>
+                Must be single checkbox selected
               </div>
             </div>
             <!-- Copy -->
