--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
     />
     <link rel="stylesheet" href="driverjs.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaQurey.css" />
   </head>
   <body>
     <main class="container">
       <div class="box">
-        <button id="demo">Demo</button>
-        <h1>Passowrd Generator</h1>
+        <div class="demo-Heading">
+          <h1>Passowrd Generator</h1>
+          <button id="demo">Demo</button>
+        </div>
         <div class="displayBox">
           <!-- Display Value Input -->
           <div class="display">
