--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="driverjs.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaQurey.css" />
+    <!-- <link rel="stylesheet" href="mediaQurey.css" /> -->
   </head>
   <body>
     <main class="container">
@@ -34,7 +34,7 @@
             <input
               type="text"
               id="inputDisplay"
-              placeholder="STr0^g P@$$w0r|>"
+              placeholder="Strong Passowrd"
             />
             <!-- Password Show/Hidden -->
             <div class="passIcon">
